--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/MyTheme"
         tools:targetApi="31">
         <activity
-            android:name=".Game.Game"
+            android:name=".game.Game"
             android:exported="false" />
         <activity
             android:name=".GameNav"
